--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Prueba de GIT</h1>
     <h2>----------------</h2>
-    <h3>Commit</h3>
+    <h3>Commit Prueba</h3>
 </body>
 </html>
