--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1>Prueba de GIT</h1>
     <h2>----------------</h2>
     <h3>Commit Prueba</h3>
+    <footer>
+        <p>Texto de footer</p>
+    </footer>
 </body>
 </html>
